feat: Add Redis, gRPC, CORS, Swagger configs, build.gradle and provisioning proto